# coq-config

./: LICENSE  Makefile  README.md  README.org  coq-config.py  pyproject.toml  sample_coq_config.yaml  setup.cfg
coqconfig/: __init__.py  coqconfig.py
