[metadata]
url = https://github.com/vzaliva/coq-config
name = coq-config
version = 0.0.2
author = Vadim Zaliva
author_email = lord@crocodile.org
description = "Script to set up a Coq project dependencies using opam, inspired by Haskell's stack."
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: BSD License    
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = coqconfig
install_requires =
    click>=7.0
    pyyaml>=5.3.1
    cerberus>=1.3.2

[options.entry_points]
console_scripts =
    coq-config = coqconfig:main

